# voicechanger

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  voicechanger.toml
.github/: AGENTS.md  copilot-instructions.md
.github/workflows/: build-linux.yml  build-matrix.yml  ci.yml  multi-arch-release.yml  publish-release.yml  quality.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
deploy/: production-mode-toggle.sh  voicechanger.service
hardware/builtin/: bluetooth.json  pi-hdmi.json  pi-headphones.json  pipewire.json
native/: README.md
native/patches/: 0001-add-LivePitchShift.patch
profiles/builtin/: clean.json  high-pitched.json  low-pitched.json
scripts/: build-dist.sh  build-pedalboard.sh
scripts/release/: build-deb.sh  post-install.sh  pre-remove.sh  version-bump.py
specs/001-realtime-voice-changer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gui-cli-parity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multi-arch-release/: plan.md  spec.md  tasks.md
specs/004-pi-cli-service-profile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pi-service-profile/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/voicechanger/: __init__.py  __main__.py  audio.py  cli.py  config.py  (+8 more)
tests/: conftest.py  fake_stream.py
(+43 files in other folders)
